--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Ofox Messenger</string>
+    <string name="welcome_to_ofox">Добро пожаловать в Ofox Messenger</string>
+    <string name="email">Email</string>
+    <string name="password">Пароль</string>
+    <string name="login">Войти</string>
+    <string name="no_account_register">Нет аккаунта? Зарегистрироваться</string>
+    <string name="toggle_theme">Переключить тему</string>
+    <string name="change_language">Изменить язык</string>
+    <string name="app_logo">Логотип приложения</string>
+    <string name="network_error">Ошибка сети. Проверьте подключение.</string>
+    <string name="retry">Повторить</string>
+    <string name="login_success">Вход выполнен успешно</string>
+    <string name="login_failed">Ошибка входа</string>
+    <string name="select_language">Выберите язык</string>
+    <string name="russian">Русский</string>
+    <string name="english">English</string>
+    <string name="kazakh">Қазақша</string>
+    <string name="app_version">Версия 1.0</string>
 </resources>
