--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,4 +17,7 @@
     <string name="english">English</string>
     <string name="kazakh">Kazakh</string>
     <string name="app_version">Version 1.0</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="no_account">No account?</string>
+    <string name="register">Register</string>
 </resources>
