--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,4 +20,6 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="no_account">No account?</string>
     <string name="register">Register</string>
+    <string name="app_slogan">Connect without boundaries</string>
+    <string name="developed_by">Developed by SG STUDIO © 2025</string>
 </resources>
