--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,22 @@
     <string name="register">Register</string>
     <string name="app_slogan">Connect without boundaries</string>
     <string name="developed_by">Developed by SG STUDIO © 2025</string>
+    
+    <!-- Новые строки для регистрации -->
+    <string name="register_welcome">Welcome to Ofox Messenger</string>
+    <string name="nickname">Nickname</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="select_photo">Select photo</string>
+    <string name="have_account">Already have an account?</string>
+    <string name="registration_success">Registration completed successfully</string>
+    <string name="registration_failed">Registration failed</string>
+    <string name="error_empty_nickname">Enter nickname</string>
+    <string name="error_short_nickname">Nickname must be at least 3 characters</string>
+    <string name="error_empty_email">Enter email</string>
+    <string name="error_invalid_email">Enter a valid email</string>
+    <string name="error_empty_password">Enter password</string>
+    <string name="error_short_password">Password must be at least 6 characters</string>
+    <string name="error_empty_confirm_password">Confirm your password</string>
+    <string name="error_passwords_not_match">Passwords do not match</string>
+    <string name="error_upload_image">Error uploading image</string>
 </resources>
