--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,21 @@
     <string name="register">Зарегистрироваться</string>
     <string name="app_slogan">Общайтесь без границ</string>
     <string name="developed_by">Разработано SG STUDIO © 2025</string>
+    <!-- Новые строки для регистрации -->
+    <string name="register_welcome">Добро пожаловать в Ofox Messenger</string>
+    <string name="nickname">Никнейм</string>
+    <string name="confirm_password">Подтвердите пароль</string>
+    <string name="select_photo">Выбрать фото</string>
+    <string name="have_account">Уже есть аккаунт?</string>
+    <string name="registration_success">Регистрация успешно завершена</string>
+    <string name="registration_failed">Ошибка при регистрации</string>
+    <string name="error_empty_nickname">Введите никнейм</string>
+    <string name="error_short_nickname">Никнейм должен содержать минимум 3 символа</string>
+    <string name="error_empty_email">Введите email</string>
+    <string name="error_invalid_email">Введите корректный email</string>
+    <string name="error_empty_password">Введите пароль</string>
+    <string name="error_short_password">Пароль должен содержать минимум 6 символов</string>
+    <string name="error_empty_confirm_password">Подтвердите пароль</string>
+    <string name="error_passwords_not_match">Пароли не совпадают</string>
+    <string name="error_upload_image">Ошибка при загрузке изображения</string>
 </resources>
