--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -50,4 +50,14 @@
     <string name="privacy_policy_title">Privacy Policy</string>
     <string name="terms_of_service_title">Terms of Service</string>
     <string name="loading">Loading...</string>
+    <string name="email_verification_title">Email Verification</string>
+    <string name="email_verification_message">A confirmation email has been sent to %s. Please check your inbox and follow the link to complete your registration.</string>
+    <string name="verification_code_title">Enter Verification Code</string>
+    <string name="verification_code_message">A 6-digit verification code has been sent to your email %s. Enter it to complete registration.</string>
+    <string name="verification_code_hint">Verification code</string>
+    <string name="resend_code">Resend code</string>
+    <string name="code_sent">Code sent to your email</string>
+    <string name="invalid_code">Invalid verification code</string>
+    <string name="verification_success">Registration successfully completed</string>
+    <string name="verification_failed">Verification failed</string>
 </resources>
