--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -90,4 +90,11 @@
     <string name="coming_soon">Coming soon</string>
     <string name="error_occurred">An error occurred</string>
     <string name="yesterday">Yesterday</string>
+    <string name="start_chat">Start chat</string>
+    <string name="select_user">Select user</string>
+    <string name="search_users">Search users</string>
+    <string name="no_users_found">No users found</string>
+    <string name="create_chat">Create chat</string>
+    <string name="error_loading_users">Error loading users</string>
+    <string name="back">Back</string>
 </resources>
